--- a/Elephanet/Elephanet.csproj
+++ b/Elephanet/Elephanet.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DocumentSession.cs" />
     <Compile Include="EntityException.cs" />
     <Compile Include="IdentityFactory.cs" />
+    <Compile Include="IDocumentSession.cs" />
     <Compile Include="Store.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreConventions.cs" />
