--- a/Elephanet.Tests/packages.config
+++ b/Elephanet.Tests/packages.config
@@ -4,4 +4,5 @@
   <package id="NSubstitute" version="1.7.2.0" targetFramework="net45" />
   <package id="Shouldly" version="2.1.1" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.runner.visualstudio" version="2.0.0-rc3-build1046" targetFramework="net45" />
 </packages>
