add a dirty micro benchmark just to see where we sit

--- a/Elephanet.Tests/Elephanet.Tests.csproj
+++ b/Elephanet.Tests/Elephanet.Tests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Bike.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="DirtySpeedTests.cs" />
     <Compile Include="LinqTests.cs" />
     <Compile Include="StoreInfoTests.cs" />
     <Compile Include="TableInfoTests.cs" />
