--- a/Elephanet/Elephanet.csproj
+++ b/Elephanet/Elephanet.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Jil">
+      <HintPath>..\packages\Jil.2.8.1\lib\net45\Jil.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Security">
       <HintPath>..\packages\Npgsql.2.2.4.3\lib\net45\Mono.Security.dll</HintPath>
     </Reference>
@@ -40,8 +43,12 @@
     <Reference Include="Npgsql">
       <HintPath>..\packages\Npgsql.2.2.4.3\lib\net45\Npgsql.dll</HintPath>
     </Reference>
+    <Reference Include="Sigil">
+      <HintPath>..\packages\Sigil.4.4.0\lib\net45\Sigil.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,13 +66,14 @@
     <Compile Include="Expressions\SqlExpression.cs" />
     <Compile Include="IdentityFactory.cs" />
     <Compile Include="IDocumentSession.cs" />
-    <Compile Include="IJsonConverter.cs" />
+    <Compile Include="Serialization\IJsonConverter.cs" />
     <Compile Include="IStoreConventions.cs" />
     <Compile Include="IStore.cs" />
     <Compile Include="IStoreInfo.cs" />
     <Compile Include="JsonbQueryProvider.cs" />
     <Compile Include="Expressions\JsonbTable.cs" />
-    <Compile Include="JsonConverter.cs" />
+    <Compile Include="Serialization\JilJsonConverter.cs" />
+    <Compile Include="Serialization\JsonConverter.cs" />
     <Compile Include="Queryable.cs" />
     <Compile Include="Extensions\QueryExtension.cs" />
     <Compile Include="QueryTranslator.cs" />
