--- a/Elephanet/packages.config
+++ b/Elephanet/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Jil" version="2.8.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Npgsql" version="2.2.4.3" targetFramework="net45" />
+  <package id="Sigil" version="4.4.0" targetFramework="net45" />
 </packages>
