--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
   postgresql: "9.4"
 
 before_script:
-  - psql -c "CREATE USER store_user with PASSWORD 'my super secret password';" -u postgres
-  - psql -c "CREATE DATABASE store;" -u postgres
-  - psql -c "GRANT ALL PRIVILEGES ON DATABASE store to store_user;"
+  - psql -V
+  - psql -c "CREATE USER store_user with PASSWORD 'my super secret password';" -U postgres
+  - psql -c "CREATE DATABASE store;" -U postgres
+  - psql -c "GRANT ALL PRIVILEGES ON DATABASE store to store_user;" -U postgres
