--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_script:
 
 script:
   - xbuild /p:Configuration=Release Elephanet.sln 
-  - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.exe  ./Elephanet.Tests/bin/Release/Elephanet.Tests.dll
+  - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.clr4.exe  ./Elephanet.Tests/bin/Release/Elephanet.Tests.dll
