--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_script:
 script:
   - xbuild /p:Configuration=Release Elephanet.sln 
   - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.clr4.exe  ./Elephanet.Tests/bin/Release/Elephanet.Tests.dll
-  - nuget Elephanet/Elephanet.csproj -IncludeReferencedProjects -Prop Configuration=Release
+  - cd Elephanet && nuget Elephanet.csproj -IncludeReferencedProjects -Prop Configuration=Release
   - nuget setApiKey NUGET_API_KEY
-  - nuget push Elephanet/*.nupkg
+  - cd Elephanet && nuget push *.nupkg
