--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script:
   - xbuild /p:Configuration=Release Elephanet.sln 
   - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.clr4.exe  ./Elephanet.Tests/bin/Release/Elephanet.Tests.dll
   - nuget setApiKey NUGET_API_KEY
-  - cd Elephanet && nuget pack Elephanet.nuspec -IncludeReferencedProjects -Prop Configuration=Release && nuget push *.nupkg
+  - cd Elephanet && nuget pack Elephanet.csproj -IncludeReferencedProjects -Prop Configuration=Release && nuget push *.nupkg
