--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: csharp
 env: VERSION=0.1.2
-env: ID=Elephanet
-env: DESCRIPTION=A .NET api to PostgreSQL's jsonb that is easy to use.
-env: AUTHOR=James Kelly
 solution: Elephanet.sln
 addons:
   postgresql: "9.4"
@@ -15,5 +12,4 @@ before_script:
 script:
   - xbuild /p:Configuration=Release Elephanet.sln 
   - mono ./packages/xunit.runners.1.9.2/tools/xunit.console.clr4.exe  ./Elephanet.Tests/bin/Release/Elephanet.Tests.dll
-  - nuget setApiKey $NUGET_API_KEY
-  - cd Elephanet && nuget pack Elephanet.nuspec -id $ID -description $DESCRIPTION -author $AUTHOR  -Version $VERSION -IncludeReferencedProjects -Prop Configuration=Release && nuget push *.nupkg
+  - cd Elephanet && nuget pack Elephanet.nuspec -Version $VERSION -IncludeReferencedProjects -Prop Configuration=Release && nuget push *.nupkg $NUGET_API_KEY
