--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: csharp
-env: VERSION=0.1.2
+env: VERSION=0.1.3
 solution: Elephanet.sln
 addons:
   postgresql: "9.4"
+branches:
+  only:
+    - master
 
 before_script:
   - psql -c "CREATE USER store_user with PASSWORD 'my super secret password';" -U postgres
