TableInfo is now injectable on StoreConventions via the ITableInfo interface Extracted ITableInfo interface from TableInfo Updated code around the library to use ITableInfo instead of TableInfo Added initial StoreConvention test on ctor

--- a/Elephanet.Tests/Elephanet.Tests.csproj
+++ b/Elephanet.Tests/Elephanet.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="LinqOrderByTests.cs" />
     <Compile Include="LinqTests.cs" />
     <Compile Include="QueryTests.cs" />
+    <Compile Include="StoreConventionsTests.cs" />
     <Compile Include="StoreInfoTests.cs" />
     <Compile Include="TableInfoTests.cs" />
     <Compile Include="Tests.cs" />
