add script to travis.yml to access nuget command

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
 deploy:
   provider: script
   skip_cleanup: true
-  script: deploy.sh
+  script: 
+    - cd Elephanet && nuget pack Elephanet.nuspec -Version $VERSION -IncludeReferencedProjects -Prop Configuration=Release && nuget push *.nupkg $NUGET_API_KEY -verbosity detailed
   on:
     branch: master
