--- a/Elephanet/packages.config
+++ b/Elephanet/packages.config
@@ -3,4 +3,5 @@
   <package id="Jil" version="2.8.1" targetFramework="net45" />
   <package id="Npgsql" version="2.2.4.3" targetFramework="net45" />
   <package id="Sigil" version="4.4.0" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.0.0" targetFramework="net45" />
 </packages>
